5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4371/executions/1577_994.log
== TEST (2019-03-14 18:48:34) 
-- CODE:
print(universidade federal do amazonas"")
-- ERROR:
File "XXXX", line 1
    print(universidade federal do amazonas"")
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:49:02) 
-- CODE:
print(universidade federal do amazonas)
-- ERROR:
File "XXXX", line 1
    print(universidade federal do amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 18:49:58) 
-- CODE:
print(universidade federal do amazonas)
-- EXECUTION TIME:
0.173346
-- ERROR:
  File "/home/codebench/codes/1577/994/main.py", line 1
    print(universidade federal do amazonas)
                             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:50:36) 
-- CODE:
print(universidade federal do amazonas)
-- ERROR:
File "XXXX", line 1
    print(universidade federal do amazonas)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:54:58) 
-- CODE:
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:55:14) 
-- CODE:
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:55:24) 
-- CODE:
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 18:56:11) 
-- CODE:
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-18 23:22:01) 
-- CODE:
print("universidade federal do amazonas")
-- OUTPUT:
universidade federal do amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 20:56:32) 
-- CODE:
print("Universidade Federal do Amazonas")
-- OUTPUT:
Universidade Federal do Amazonas
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:00:39) 
-- CODE:
print("Universidade Federal do Amazonas")
-- EXECUTION TIME:
0.148212
-- TEST CASE 1:
---- input:
xx
---- correct output:
Universidade Federal do Amazonas
---- user output:
Universidade Federal do Amazonas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
